public/css/style.less
.section-title() {
  display: flex;
  align-items: center;
  margin-bottom: 0;

  .help-button {
    margin-left: 4px;
  }

  &+ul {
    margin-top: 0;
    border-top: 0;
  }
}

// UI enhancements
body.zen-enhanced {

  // Remove ugly text outline at night
  &[data-theme-daytime="night"] {

    // Need to use at least 3 IDs to make it
    // more specific than the default style
    // (smh)
    #wrapper #content #gma .town-name+li {
      text-shadow: none !important;
      color: #ddab76 !important;
    }
  }

  // Remove ugly text outline on pandemonium at day
  &[data-theme-daytime="day"][data-theme-primary-modifier="panda"] {

    // Need to use at least 3 IDs to make it
    // more specific than the default style
    // (smh)
    #wrapper #content #gma .town-name+li {
      text-shadow: none !important;

      .hardcore {
        color: #e6c4c4;
      }
    }
  }

  // Missing padding for camping zone
  .zone-camp {
    padding-bottom: 5px;
  }

  // Citizen list avatar size
  .citizens-list .avatar {
    background-size: auto !important;
  }

  // Citizen list omniscience
  .citizens-list {
    &>.header {
      .cell:last-child {
        display: flex;
        align-items: center;
        gap: 4px;
      }
    }

    &>.stretch {

      .citizen-offline,
      .citizen-online,
      .citizen-dead {
        text-decoration: none;

        &+.cell img {
          padding-left: 4px;
        }
      }

      .citizen-box-name,
      .citizen-box-name-me {
        img {
          padding-left: 4px;
        }

        &>img:first-child {
          padding-left: 0;
          padding-right: 4px;

          &+span img {
            padding-right: 4px;
          }
        }

        &+.citizen-box {
          .inventory {
            display: flex;
            justify-content: center;

            img {
              vertical-align: unset;
            }
          }
        }
      }

      .citizen-dead+.cell+.cell+.cell+.cell {
        padding: 2px 4px;
      }
    }
  }

  // Tabs alignment
  .tabs .tab .tab-link {
    display: flex;
    align-items: center;
    padding-top: 0;

    img {
      padding-right: 4px;
    }
  }

  // Reusable counters alignments
  .dashboard {
    .counter {
      display: inline-flex;
      align-items: center;
      gap: 4px;

      &+.help-button {
        vertical-align: super;
      }
    }

    img {
      padding-left: 4px;
    }
  }

  // Citizen home actions
  .citizen-home {
    h5 {
      .section-title();
    }
  }

  #upgrade_home_level {
    margin-top: 5px;
  }

  // Heroic actions popup
  .heroic_actions {
    padding: 2px;

    .heroic_action {
      padding-left: 20px;

      .label {
        padding-left: 0;
      }
    }

    li:not(.heroic_action) {
      padding-left: 0;

      .button {
        display: flex;
        align-items: center;
      }
    }
  }

  // Town main dashboard
  .town-main-content {
    .overview-checklist {
      padding-top: 4px;
      padding-bottom: 6px;

      li {
        background-position: left;
      }
    }

    .overview-list {
      padding-top: 4px;
      padding-bottom: 6px;
    }

    .dashboard+.row {
      h5 {
        .section-title();

        &+div>ul {
          margin-top: 0;
        }
      }

      &+.row {
        display: flex;
        flex-direction: column;

        h5 {
          order: 1;
          .section-title();
        }

        .defense-detail {
          order: 2;
          padding: 0;

          ul {
            margin-top: 0;
            margin-bottom: 0;
          }
        }

        .note-critical {
          order: 3;
        }
      }
    }
  }

  // Action points
  .game-menu-area .game-bar .ulcont {
    display: flex;
    gap: 4px;
    box-shadow: 0px 0px 2px 2px #372213 inset;

    li::before {
      margin-right: 0;
    }
  }

  // Soul page
  .soul {
    .score {
      display: flex;
      align-items: center;
      gap: 4px;
    }

    .personal_desc {
      background-position-y: 6px;
    }
  }

  // Attack page
  .daily-attack {
    .infos h2 {
      font-family: Arial, sans-serif;
      font-variant: small-caps;
      text-transform: unset;
    }
  }

  // Log scrollbar
  .log-content {
    scrollbar-color: #f0d79e transparent;
    scrollbar-width: thin;

    &::-webkit-scrollbar {
      background: #f0d79e;
      width: 6px;
    }

    &::-webkit-scrollbar-thumb {
      background: transparent;
    }
  }

  // Shaman popup
  .popup-shaman {
    .pm::after {
      margin-left: 4px;
    }

    .bluelist {
      padding-bottom: 4px;
    }
  }

  // Shaman actions
  button[data-rain="role"] {
    .pm::after {
      margin-left: 0;
    }
  }
}

// Bank blocker
#bank-inventory {
  position: relative;

  .bank-blocker {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-image: linear-gradient(45deg, rgba(255, 255, 255, .2) 25%,
        transparent 25%,
        transparent 50%,
        rgba(255, 255, 255, .2) 50%,
        rgba(255, 255, 255, .2) 75%,
        transparent 75%,
        transparent);
    z-index: 100;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 8px;
  }
}

.time-remaining {
  font-weight: bold;
  text-align: center;
  color: #f0d79e;
  margin: 0;
  margin-top: 4px;
}

// Map preview styles
@keyframes pulse {
  0% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.05);
  }

  100% {
    transform: scale(1);
  }
}

#zen-map-preview-tooltip {
  position: fixed;
  display: none;
  background: #5c2b20;
  border: 1px solid #efdba8;
  color: #f86;
  font-variant: small-caps;
  font-weight: 700;
  padding: 2px;
  z-index: 1000;

  &.visible {
    display: block;
  }
}

body.zen-map-preview-enabled {
  .town-row {
    &>.cell:first-child img {
      animation: pulse 1s infinite;
      cursor: pointer;
    }
  }
}

// External city links
.zen-external-link {
  display: flex !important;
  align-items: center;
  justify-content: center;
  gap: 4px;

  p {
    margin: 0;
  }
}

// External sites update
.zen-update-button {
  display: flex !important;
  align-items: center;
  justify-content: center;
  gap: 8px;
  width: auto !important;
  margin: 0 auto;

  .site {
    position: relative;

    img {
      margin-right: 0;
    }

    .status {
      position: absolute;
      bottom: -2px;
      right: -2px;
    }
  }
}

.zen-update-error {
  p {
    margin: 0;
  }

  a {
    display: block;
    font-weight: bold;
    text-align: center;
    color: #f0d79e;
  }
}

